# wxDateCalc

./: README.md  background.xpm  meson.build  org.altervista.numerone.wxdatecalc.yml  wxDateCalc.desktop  wxDateCalcApp.cpp  wxDateCalcApp.h  wxDateCalcMain.cpp  wxDateCalcMain.h
po/: LINGUAS  POTFILES  de.po  es.po  fr.po  it.po  meson.build  pt.po  wxdatecalc.pot
snap/: snapcraft.yaml
